# kdegraphics-thumbnailers

./: CMakeLists.txt
pdf/: CMakeLists.txt  pdfcreator.cpp  pdfcreator.h  pdfthumbnail.json
